--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="108"
     android:viewportHeight="108">
     <path
-        android:fillColor="#4CAF50"
+        android:fillColor="@color/teal_700"
         android:pathData="M0,0h108v108h-108z" />
 </vector>
