--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -22,10 +22,12 @@
         android:id="@+id/text_no_favorites"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/no_favorites_message"
-        android:textSize="18sp"
-        android:textColor="@android:color/darker_gray"
+        android:gravity="center"
         android:visibility="gone"
+        android:paddingHorizontal="50dp"
+        android:text="@string/no_favorites_message"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
