--- a/app/src/main/res/layout/fragment_cocktail_list.xml
+++ b/app/src/main/res/layout/fragment_cocktail_list.xml
@@ -6,17 +6,17 @@
     android:layout_height="match_parent">
 
     <!-- 搜索栏 (可选，如果需要列表内搜索) -->
-    <androidx.appcompat.widget.SearchView
+    <SearchView
         android:id="@+id/search_view_list"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:background="@drawable/bg_rounded_corners"
         app:iconifiedByDefault="false"
-        app:queryHint="@string/search_hint_cocktail"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:queryHint="@string/search_hint_cocktail" />
 
     <!-- 鸡尾酒列表 RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
